--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,4 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Be+Vietnam&display=swap');
 @import "bootstrap";
+
 
 .clear {
   clear:both;
@@ -48,3 +50,14 @@ header {
 hr {
   clear:both;
 }
+
+h1 {
+  font-family: 'Be Vietnam', sans-serif;
+
+}
+
+h2 {
+  font-family: 'Be Vietnam', sans-serif;
+
+}
+
