added modal for quote submission form

--- a/app/views/quotes/about.html.erb
+++ b/app/views/quotes/about.html.erb
@@ -24,7 +24,7 @@
       <h2 class="text-center">Raquibbi Muhammaddi</h2>
       <br />
       <p>
-        Raquibbi is currently a GIS Technician for a local city government. He graduated from Texas A&M University in College Station. He has previous experience building websites that deal with GIS, a framework for aggregating, managing, and analyzing geographic/spatial data.  
+        Raquibbi is currently working for a local city government. He graduated from Texas A&M University in College Station. He has previous experience building websites that deal with GIS, a framework for aggregating, managing, and analyzing geographic/spatial data.  
       </p>
     </div>
   </div>
