fixed spelling on about page

--- a/app/views/quotes/about.html.erb
+++ b/app/views/quotes/about.html.erb
@@ -6,7 +6,7 @@
   </p>
   <br />
   <p>
-    Raquibbi learned how to code slowly, first by taking a web development course in college which taught him the fundementals of creating static webpages using your basic HTML & CSS and then by enrolling into the UT Coding Bootcamp post graduating from college. 
+    Raquibbi learned how to code slowly, first by taking a web development course in college which taught him the fundamentals of creating static webpages using your basic HTML & CSS and then by enrolling into the UT Coding Bootcamp post graduating from college. 
   </p>
   <p>
     If you want to learn how to code - start <a target="_blank" href="https://online.bootcampspot.com"> here</a>.
