fixed link on about page

--- a/app/views/quotes/about.html.erb
+++ b/app/views/quotes/about.html.erb
@@ -2,7 +2,7 @@
   <h1>About Splurty</h1>
 
   <p>
-    Splurty was built by <a target="_blank" href="http://github.com/jaykibi">Raquibbi</a>. A web developer who is on a mission to explore the software engineering field and all that entails. This is his first deployed product and probably his MVP at the moment. Hopefully there will be many more products created by him. 
+    Splurty was built by <a target="_blank" href="https://raquibbi.netlify.com">Raquibbi</a>. A web developer who is on a mission to explore the software engineering field and all that entails. This is his first deployed product and probably his MVP at the moment. Hopefully there will be many more products created by him. 
   </p>
   <br />
   <p>
