changed placeholder text in quote modal

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
           </div>
           <%= simple_form_for Quote.new do |f| %>
             <div class="modal-body">
-                  <%= f.input :saying, label: "What is the saying you want to add?", placeholder: "Bout to hit this freestyle coming out ya boy cuz u know its gone be awhile" %>
+                  <%= f.input :saying, label: "What is the saying you want to add?", placeholder: "I can't taste what a pizza tastes like unless it's drowned in ranch" %>
                   <br />
                   <%= f.input :author, label: "Who is the author of this quote?", placeholder: "Jeremy Shamar Dawkins" %>
             </div>
